--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -41,7 +41,7 @@ steps:
           --cpu=1 \
           --timeout=300 \
           --max-instances=10 \
-          --set-env-vars="N8N_BASIC_AUTH_ACTIVE=true,N8N_BASIC_AUTH_USER=admin,N8N_BASIC_AUTH_PASSWORD=${_ADMIN_PASSWORD},DB_TYPE=postgresdb,DB_POSTGRESDB_HOST=$DB_IP,DB_POSTGRESDB_PORT=5432,DB_POSTGRESDB_DATABASE=n8n,DB_POSTGRESDB_USER=n8n_user,DB_POSTGRESDB_PASSWORD=${_DB_PASSWORD},N8N_PROTOCOL=https,NODE_ENV=production"
+          --set-env-vars="PORT=5678,N8N_PORT=5678,N8N_LISTEN_ADDRESS=0.0.0.0,N8N_BASIC_AUTH_ACTIVE=true,N8N_BASIC_AUTH_USER=admin,N8N_BASIC_AUTH_PASSWORD=${_ADMIN_PASSWORD},DB_TYPE=postgresdb,DB_POSTGRESDB_HOST=$DB_IP,DB_POSTGRESDB_PORT=5432,DB_POSTGRESDB_DATABASE=n8n,DB_POSTGRESDB_USER=n8n_user,DB_POSTGRESDB_PASSWORD=${_DB_PASSWORD},N8N_PROTOCOL=https,NODE_ENV=production,WEBHOOK_URL=https://n8nkineo-2229056202.europe-west1.run.app/"
 
   # Actualizar con la URL correcta
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
@@ -52,10 +52,10 @@ steps:
         # Obtener URL del servicio
         SERVICE_URL=$(gcloud run services describe n8nkineo --region=europe-west1 --format="value(status.url)")
         
-        # Actualizar variable N8N_HOST
+        # Actualizar variables de entorno con la URL correcta
         gcloud run services update n8nkineo \
           --region=europe-west1 \
-          --update-env-vars="N8N_HOST=${SERVICE_URL#https://}"
+          --update-env-vars="N8N_HOST=${SERVICE_URL#https://},WEBHOOK_URL=$SERVICE_URL/"
 
 substitutions:
   _DB_PASSWORD: 'MiPasswordSeguro123!'
