--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -30,18 +30,17 @@ steps:
         # Obtener IP de Cloud SQL
         DB_IP=$(gcloud sql instances describe n8n-postgres --format="value(ipAddresses[0].ipAddress)")
         
-        # Desplegar en Cloud Run
+        # Desplegar en Cloud Run (usando puerto 8080 estándar)
         gcloud run deploy n8nkineo \
           --image=n8nio/n8n:latest \
           --platform=managed \
           --region=europe-west1 \
           --allow-unauthenticated \
-          --port=5678 \
           --memory=2Gi \
           --cpu=1 \
           --timeout=300 \
           --max-instances=10 \
-          --set-env-vars="PORT=5678,N8N_PORT=5678,N8N_LISTEN_ADDRESS=0.0.0.0,N8N_BASIC_AUTH_ACTIVE=true,N8N_BASIC_AUTH_USER=admin,N8N_BASIC_AUTH_PASSWORD=${_ADMIN_PASSWORD},DB_TYPE=postgresdb,DB_POSTGRESDB_HOST=$DB_IP,DB_POSTGRESDB_PORT=5432,DB_POSTGRESDB_DATABASE=n8n,DB_POSTGRESDB_USER=n8n_user,DB_POSTGRESDB_PASSWORD=${_DB_PASSWORD},N8N_PROTOCOL=https,NODE_ENV=production,WEBHOOK_URL=https://n8nkineo-2229056202.europe-west1.run.app/"
+          --set-env-vars="PORT=8080,N8N_PORT=8080,N8N_LISTEN_ADDRESS=0.0.0.0,N8N_BASIC_AUTH_ACTIVE=true,N8N_BASIC_AUTH_USER=admin,N8N_BASIC_AUTH_PASSWORD=${_ADMIN_PASSWORD},DB_TYPE=postgresdb,DB_POSTGRESDB_HOST=$DB_IP,DB_POSTGRESDB_PORT=5432,DB_POSTGRESDB_DATABASE=n8n,DB_POSTGRESDB_USER=n8n_user,DB_POSTGRESDB_PASSWORD=${_DB_PASSWORD},N8N_PROTOCOL=https,NODE_ENV=production"
 
   # Actualizar con la URL correcta
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
